# ChangeLog for dev-texlive/texlive-latexextra
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-latexextra/ChangeLog,v 1.43 2011/02/17 13:41:59 aballier Exp $

  17 Feb 2011; Alexis Ballier <aballier@gentoo.org>
  texlive-latexextra-2010.ebuild, +files/vpe_invocation.patch:
  Add a patch from debian to fix vpe invocation wrt its shebang, part of bug
  #289818

  17 Dec 2010; Fabian Groffen <grobian@gentoo.org>
  texlive-latexextra-2010.ebuild:
  Marked ~ppc-macos

*texlive-latexextra-2010 (24 Oct 2010)

  24 Oct 2010; Alexis Ballier <aballier@gentoo.org>
  +texlive-latexextra-2010.ebuild:
  Bump to TeX Live 2010

  01 Feb 2010; Alexis Ballier <aballier@gentoo.org>
  texlive-latexextra-2008-r1.ebuild:
  Depend on texlive-pictures for epic.sty needed by overpic, by Michal
  Terepeta <michal.terepeta@gmail.com>, bug #294569

  25 Jan 2010; Alexis Ballier <aballier@gentoo.org>
  texlive-latexextra-2009.ebuild:
  license update

  25 Jan 2010; Alexis Ballier <aballier@gentoo.org>
  texlive-latexextra-2009.ebuild:
  Remove nosell from license, xwatermark is lppl

  15 Jan 2010; Fabian Groffen <grobian@gentoo.org>
  texlive-latexextra-2008-r1.ebuild:
  Also keyword the well-tested texlive-2008

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  texlive-latexextra-2009.ebuild:
  Transfer Prefix keywords

*texlive-latexextra-2009 (11 Jan 2010)

  11 Jan 2010; Alexis Ballier <aballier@gentoo.org>
  +texlive-latexextra-2009.ebuild:
  Bump to TeX Live 2009

  10 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  texlive-latexextra-2008-r1.ebuild:
  Add ~mips love

  15 May 2009; Alexis Ballier <aballier@gentoo.org>
  -texlive-latexextra-2007.ebuild:
  remove old

  18 Mar 2009; Brent Baude <ranger@gentoo.org>
  texlive-latexextra-2008-r1.ebuild:
  Marking texlive-latexextra-2008-r1 ppc stable for bug 253551

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  texlive-latexextra-2008-r1.ebuild: