@@ -5025,13 +5025,14 @@ DIST texlive-module-zwpagelayout.doc-2009.tar.xz 527192 RMD160 c21dfa1a9c74ec7f4
 DIST texlive-module-zwpagelayout.doc-2010.tar.xz 527192 RMD160 bac25a913230e849f5cf685d713c2365152ed919 SHA1 f94867b67145ff5f9f4695df09a8b78bd08fb707 SHA256 e8dbee23e2909cbd938cf9ea7ef4aad488a842eb99b90b8c73b253b251ed7f96
 EBUILD texlive-latexextra-2008-r1.ebuild 18770 RMD160 91e13f4e2175ffe4d1635ed3e81fc2410b359b8a SHA1 4a3f1106b2f630eb8257a5f6590b5bbb51d7a83a SHA256 4b390fecd8edbec67bf9888d2efe1c93bf594e08277c26914880ba7f429329fc
 EBUILD texlive-latexextra-2009.ebuild 21088 RMD160 b2551f67b402f8e1ef5c51321bc3797e6c4b72e9 SHA1 fd007fc945904c483493251b5d6277eda1b8c4f5 SHA256 9047bdae5715e3ba51d25af301895b32a8eb2be04a1af94e69c6a3f71861d29b
+EBUILD texlive-latexextra-2010-r1.ebuild 23176 RMD160 174f2a781a0c5bbda991b1b499127793e98f9b08 SHA1 ebd1dace21a7f4a0c010d043b0142360f9e194a5 SHA256 5d08c12183e465964f357816dc43036b43cc65464543c8a5cd37f4b1b55014c2
 EBUILD texlive-latexextra-2010.ebuild 23240 RMD160 9e9238c4e7281319eb7d3d87f16be998d2234be5 SHA1 09ec18aa23129cf2a2a7eb0d6a1237c9846629b8 SHA256 0783ddd158a82df012c5e67a34ec13ad8fddfff221a49d604b50f41dedeeb160
-MISC ChangeLog 6458 RMD160 002528fbd836f53b331453abbaa905f942cf1a4b SHA1 864de774a23434bfd81803817e13e1a914f16662 SHA256 2bc11e15f888a303aae5d0b020384f0cd7f1e617de008044a7e3d9fbbb092adf
+MISC ChangeLog 6667 RMD160 06498f79de83236067ae6ff58d0143dc5ee9f579 SHA1 54089c01dbb82b21903bd1130829bc4b44f49dac SHA256 d5ec9c714d6f03a56ef16bb4c290b5089e26e055a45b61824be64b1a0bcd97d5
 MISC metadata.xml 349 RMD160 839a20bf4e76300a435d2533cf12618b9d9a579f SHA1 41f73d3daea7f4b754f4ac101e2700fcc7e4ff26 SHA256 1d68addc348c8fbd6b0dc57cfaca7300b9b52214bb7d44aabdb2a6b43f582b99
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1dJb0ACgkQvFcC4BYPU0po8QCgqVmKAeknluWuBdVpe2Ra5fK8
-YGcAoLrOqb6QJ+NpUg2Fxs6vqmOiN7G8
-=HZln
+iEYEARECAAYFAk1dezUACgkQvFcC4BYPU0riFwCfSHdzcSoJkOctWhzU1nwYb/71
+WR4AoM2iAW0ERky0qoCOe6GdAPNtjdhG
+=y3Uy
 -----END PGP SIGNATURE-----
