@@ -1,0 +1,34 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-latexextra/texlive-latexextra-2010-r1.ebuild,v 1.1 2011/02/17 19:46:40 aballier Exp $
+
+EAPI="3"
+
+TEXLIVE_MODULE_CONTENTS="2up AkkTeX ESIEEcv HA-prosper Tabbing a0poster a4wide a5comb abstract achemso acromake acronym addlines adrconv adrlist advdate akletter alterqcm altfont amsaddr animate anonchap answers anyfontsize appendix arcs arrayjobx assignment attachfile authoraftertitle authorindex autotab background beamer-contrib beamerposter begriff beton bez123 bezos bigfoot bigints bizcard blindtext blkarray block blowup boites bold-extra bookest booklet boolexpr bophook boxedminipage boxhandler bracketkey braket breakurl bullcntr bussproofs calctab calrsfs cals calxxxx calxxxx-yyyy cancel capt-of captcont captdef cases casyl catechis cbcoptic ccaption cclicenses cd cd-cover cdpbundl cellspace censor changebar changelayout changepage changes chappg chapterfolder chletter chngcntr chronology circ cjw clefval cleveref clock cmdstring cmdtrack cmsd codedoc codepage colordoc colorinfo colortab colorwav combelow combine comma comment concprog constants contour cooking cookybooky cool coollist coolstr cooltooltips coordsys courseoutline coursepaper coverpage crossreference csquotes csvsimple csvtools cuisine currfile cursor cutwin cv cweb-latex dashbox dashrule dashundergaps datatool dateiliste datenumber datetime dblfloatfix decimal delimtxt diagnose dialogl dichokey dinbrief directory dlfltxb dnaseq docmfp docmute doi dotarrow dotseqn dox dpfloat dprogress drac draftcopy draftwatermark dtk dtxgallery dvdcoll easy easylist ean13isbn ebezier ecclesiastic ecv ed edmargin eemeir egplot ellipsis elmath elpres elsarticle em emptypage emulateapj endfloat endheads endnotes engpron engrec enumitem envbig environ epigraph epiolmec eqell eqlist eqname eqparbox errata esdiff esint esint-type1 etaremune etextools etoolbox eukdate everyhook everypage exam examdesign examplep excludeonly exercise exp-testopt expdlist export extract facsimile fancynum fancypar fancytooltips figsize filecontents filehook fink fixfoot fixme fjodor flabels flacards flagderiv flashcards flashmovie flippdf floatrow flowfram fltpage fmp fmtcount fn2end fnbreak fncychap fncylab fnpara foilhtml fonttable footmisc footnpag forarray forloop formlett formular fragments frame framed frankenstein ftcap ftnxtra fribrief fullblck fullpict fundus fwlw gauss gcard gcite genmpage getfiledate ginpenc gloss gmdoc gmdoc-enhance gmeometric gmiflink gmutils gmverb graphicx-psmin grfpaste grid gridset guitlogo hanging harpoon hc hhtensor histogr hitec hpsdiss hrefhide hvindex hypdvips hyper hypernat hyperref-docsrc hyperxmp hyphenat idxlayout ifmslide ifmtarg ifplatform image-gallery imakeidx import inlinedef inputtrc interactiveworkbook inversepath iso iso10303 isodate isonums isodoc isorot isotope kerntest keycommand keystroke kix labbook labelcas labels lastpage latex-tds layouts lazylist lcd lcg leading leftidx lettre lettrine lewis lhelp limap linegoal lipsum listing listofsymbols listliketab lkproof locality localloc logical-markup-utils logpap lsc ltabptch ltxdockit ltxindex ltxnew magaz mailing mailmerge makebarcode makebox makecell makecirc makecmds makedtx makeglos manfnt manuscript mapcodes maple marginfix marginnote mathexam maybemath mcaption mceinleger mcite mciteplus mdframed memexsupp menu method metre mff mftinc midpage minibox minipage-marginpar minitoc minted minutes misc209 mla-paper mlist mmap moderncv modref modroman morefloats moresize moreverb movie15 mparhack msc msg mslapa mtgreek multenum multibox multibbl multicap multirow mylatexformat nag namespc ncclatex ncctools needspace newcommand newfile newlfm newspaper newvbtm newverbs nextpage nfssext-cfr niceframe nicetext nlctdoc noitcrul nolbreaks nomencl nomentbl nonfloat nopageno notes notoccite ntabbing ntheorem numname numprint ocgtools ocr-latex octavo oldstyle onlyamsmath opcit optional outline outliner overpic pagecont pagenote pagerange pagesLTS paper papercdcase papermas papertex paralist paresse patch patchcmd pauldoc pawpict pbox pbsheet pdf14 pdfcomment pdfcprot pdfmarginpar pdfscreen pdfslide pdfsync pdfwin pdfx pecha perltex permute petiteannonce philex photo pittetd placeins plates plantslabels plweb polyglot polynom polynomial polytable postcards poster-mac ppower4 ppr-prv preprint prettyref preview printlen probsoln program progress properties prosper protex protocol psfragx pst-pdf pstool qcm qstest qsymbols quotchap quotmark randtext rccol rcs-multi rcsinfo recipe recipecard rectopma refcheck refman refstyle regcount register relenc relsize repeatindex rjlparshap rlepsf rmpage robustcommand robustindex romannum rotfloat rotpages rtkinenc rvwrite sauerj savefnmark savesym savetrees scale scalebar sciwordconv script sdrt sectionbox sectsty selectp semantic semioneside seqsplit sf298 sffms sfheaders sfmath shadbox shadethm shapepar shipunov shorttoc show2e showdim showexpl showlabels sidecap silence simplecd simplecv simplewick skb skeycommand skeyval slantsc slashbox smalltableof smartref snapshot soul sparklines spreadtab spverbatim splitindex spot spotcolor sprite srcltx sseq ssqquote stack standalone statistik stdclsdv stdpage stex stringstrings sttools stubs subdepth subeqn subeqnarray subfigure subfloat substr supertabular svgcolor svn svn-multi svn-prov syntax syntrace synttree tableaux tablenotes tablists tabls tabto-ltx tabularborder tabularcalc tabularew tabulary talk taupin tcldoc tdclock technics ted termcal termlist tex-label texlogos texmate texments texpower texshade textcase textfit textmerg textpos theoremref threeparttable threeparttablex thinsp thmtools thumb thumby ticket timesht timing titlefoot titlepic titleref titlesec titling tocbibind tocloft tocvsec2 todo todonotes tokenizer toolbox topfloat totcount totpages tracking trfsigns trimspaces trsym trivfloat truncate twoinone twoup type1cm typedref typogrid ucs uebungsblatt ulsy umoline underlin undertilde undolabl units upmethodology upquote ushort varindex varsfromjobname varwidth vector verbatimbox verbatimcopy verbdef version versions vertbars vhistory vita vmargin volumes vpe vrsion vruler vwcol wallpaper warning warpcol was widetable williams wordlike wrapfig xargs xbmc xcomment xtab xtcapts xdoc xfor xifthen xmpincl xnewcommand xoptarg xstring xwatermark xytree yafoot yagusylo ydoc yplan zed-csp ziffer zwgetfdate zwpagelayout collection-latexextra
+"
+TEXLIVE_MODULE_DOC_CONTENTS="2up.doc AkkTeX.doc ESIEEcv.doc HA-prosper.doc Tabbing.doc a0poster.doc a4wide.doc a5comb.doc abstract.doc achemso.doc acromake.doc acronym.doc addlines.doc adrconv.doc adrlist.doc advdate.doc akletter.doc alterqcm.doc altfont.doc amsaddr.doc animate.doc anonchap.doc answers.doc anyfontsize.doc appendix.doc arcs.doc arrayjobx.doc assignment.doc attachfile.doc authoraftertitle.doc authorindex.doc autotab.doc background.doc beamer-contrib.doc beamerposter.doc begriff.doc beton.doc bez123.doc bezos.doc bigfoot.doc bigints.doc bizcard.doc blindtext.doc blkarray.doc block.doc blowup.doc boites.doc bold-extra.doc bookest.doc booklet.doc boolexpr.doc bophook.doc boxedminipage.doc boxhandler.doc bracketkey.doc braket.doc breakurl.doc bullcntr.doc bussproofs.doc calctab.doc calrsfs.doc cals.doc calxxxx.doc calxxxx-yyyy.doc cancel.doc capt-of.doc captcont.doc captdef.doc cases.doc casyl.doc catechis.doc cbcoptic.doc ccaption.doc cclicenses.doc cd.doc cd-cover.doc cdpbundl.doc cellspace.doc censor.doc changebar.doc changelayout.doc changepage.doc changes.doc chappg.doc chapterfolder.doc chletter.doc chngcntr.doc chronology.doc circ.doc cjw.doc clefval.doc cleveref.doc clock.doc cmdstring.doc cmdtrack.doc cmsd.doc codedoc.doc codepage.doc colordoc.doc colorinfo.doc colortab.doc colorwav.doc combelow.doc combine.doc comma.doc comment.doc concprog.doc constants.doc contour.doc cooking.doc cookybooky.doc cool.doc coollist.doc coolstr.doc cooltooltips.doc coordsys.doc courseoutline.doc coursepaper.doc coverpage.doc crossreference.doc csquotes.doc csvsimple.doc csvtools.doc cuisine.doc currfile.doc cursor.doc cutwin.doc cv.doc cweb-latex.doc dashrule.doc dashundergaps.doc datatool.doc dateiliste.doc datenumber.doc datetime.doc dblfloatfix.doc delimtxt.doc diagnose.doc dialogl.doc dichokey.doc dinbrief.doc directory.doc dlfltxb.doc dnaseq.doc docmfp.doc docmute.doc doi.doc dotarrow.doc dotseqn.doc dox.doc dpfloat.doc dprogress.doc drac.doc draftcopy.doc draftwatermark.doc dtk.doc dtxgallery.doc dvdcoll.doc easy.doc easylist.doc ean13isbn.doc ebezier.doc ecclesiastic.doc ecv.doc ed.doc edmargin.doc eemeir.doc egplot.doc ellipsis.doc elmath.doc elpres.doc elsarticle.doc em.doc emptypage.doc emulateapj.doc endfloat.doc endheads.doc endnotes.doc engpron.doc engrec.doc enumitem.doc envbig.doc environ.doc epigraph.doc epiolmec.doc eqell.doc eqlist.doc eqparbox.doc errata.doc esdiff.doc esint.doc esint-type1.doc etaremune.doc etextools.doc etoolbox.doc eukdate.doc everyhook.doc everypage.doc exam.doc examdesign.doc examplep.doc excludeonly.doc exercise.doc exp-testopt.doc expdlist.doc export.doc extract.doc facsimile.doc fancynum.doc fancypar.doc fancytooltips.doc figsize.doc filecontents.doc filehook.doc fink.doc fixfoot.doc fixme.doc fjodor.doc flabels.doc flacards.doc flagderiv.doc flashcards.doc flashmovie.doc flippdf.doc floatrow.doc flowfram.doc fltpage.doc fmp.doc fmtcount.doc fn2end.doc fnbreak.doc fncychap.doc fncylab.doc fnpara.doc fonttable.doc footmisc.doc footnpag.doc forarray.doc forloop.doc formlett.doc formular.doc fragments.doc frame.doc framed.doc frankenstein.doc ftcap.doc ftnxtra.doc fribrief.doc fullblck.doc fullpict.doc fundus.doc fwlw.doc gauss.doc gcard.doc gcite.doc genmpage.doc getfiledate.doc ginpenc.doc gloss.doc gmdoc.doc gmdoc-enhance.doc gmeometric.doc gmiflink.doc gmutils.doc gmverb.doc graphicx-psmin.doc grfpaste.doc grid.doc gridset.doc guitlogo.doc hanging.doc harpoon.doc hc.doc hhtensor.doc histogr.doc hitec.doc hpsdiss.doc hrefhide.doc hvindex.doc hypdvips.doc hyper.doc hypernat.doc hyperref-docsrc.doc hyperxmp.doc hyphenat.doc idxlayout.doc ifmslide.doc ifmtarg.doc ifplatform.doc image-gallery.doc imakeidx.doc import.doc inlinedef.doc inputtrc.doc interactiveworkbook.doc inversepath.doc iso.doc iso10303.doc isodate.doc isonums.doc isodoc.doc isorot.doc kerntest.doc keycommand.doc keystroke.doc kix.doc labbook.doc labelcas.doc labels.doc lastpage.doc layouts.doc lazylist.doc lcd.doc lcg.doc leading.doc leftidx.doc lettre.doc lettrine.doc lewis.doc lhelp.doc linegoal.doc lipsum.doc listing.doc listofsymbols.doc listliketab.doc lkproof.doc locality.doc localloc.doc logical-markup-utils.doc logpap.doc lsc.doc ltabptch.doc ltxdockit.doc ltxindex.doc ltxnew.doc magaz.doc mailing.doc mailmerge.doc makebarcode.doc makebox.doc makecell.doc makecirc.doc makecmds.doc makedtx.doc makeglos.doc manuscript.doc maple.doc marginfix.doc marginnote.doc mathexam.doc maybemath.doc mcaption.doc mceinleger.doc mcite.doc mciteplus.doc mdframed.doc memexsupp.doc menu.doc method.doc metre.doc mff.doc mftinc.doc midpage.doc minibox.doc minipage-marginpar.doc minitoc.doc minted.doc minutes.doc mla-paper.doc mlist.doc mmap.doc moderncv.doc modref.doc modroman.doc morefloats.doc moresize.doc moreverb.doc movie15.doc mparhack.doc msc.doc msg.doc mslapa.doc mtgreek.doc multenum.doc multibox.doc multibbl.doc multicap.doc multirow.doc mylatexformat.doc nag.doc namespc.doc ncclatex.doc ncctools.doc needspace.doc newcommand.doc newfile.doc newlfm.doc newspaper.doc newvbtm.doc newverbs.doc nfssext-cfr.doc niceframe.doc nicetext.doc nlctdoc.doc noitcrul.doc nolbreaks.doc nomencl.doc nomentbl.doc nonfloat.doc nopageno.doc notes.doc notoccite.doc ntabbing.doc ntheorem.doc numname.doc numprint.doc ocgtools.doc ocr-latex.doc octavo.doc oldstyle.doc onlyamsmath.doc opcit.doc optional.doc outline.doc outliner.doc overpic.doc pagecont.doc pagenote.doc pagerange.doc pagesLTS.doc paper.doc papercdcase.doc papermas.doc papertex.doc paralist.doc paresse.doc patchcmd.doc pauldoc.doc pbox.doc pbsheet.doc pdf14.doc pdfcomment.doc pdfcprot.doc pdfmarginpar.doc pdfscreen.doc pdfslide.doc pdfsync.doc pdfwin.doc pdfx.doc pecha.doc perltex.doc permute.doc petiteannonce.doc philex.doc photo.doc pittetd.doc placeins.doc plates.doc plantslabels.doc plweb.doc polyglot.doc polynom.doc polynomial.doc polytable.doc postcards.doc poster-mac.doc ppower4.doc ppr-prv.doc preprint.doc prettyref.doc preview.doc printlen.doc probsoln.doc program.doc progress.doc properties.doc prosper.doc protex.doc protocol.doc psfragx.doc pst-pdf.doc pstool.doc qcm.doc qstest.doc qsymbols.doc quotchap.doc quotmark.doc randtext.doc rccol.doc rcs-multi.doc rcsinfo.doc recipe.doc recipecard.doc rectopma.doc refcheck.doc refman.doc refstyle.doc regcount.doc register.doc relenc.doc relsize.doc repeatindex.doc rjlparshap.doc rlepsf.doc rmpage.doc robustcommand.doc robustindex.doc romannum.doc rotfloat.doc rotpages.doc rtkinenc.doc rvwrite.doc sauerj.doc savefnmark.doc savetrees.doc scale.doc scalebar.doc sciwordconv.doc script.doc sdrt.doc sectionbox.doc sectsty.doc semantic.doc semioneside.doc seqsplit.doc sf298.doc sffms.doc sfheaders.doc shadethm.doc shapepar.doc shipunov.doc shorttoc.doc show2e.doc showexpl.doc showlabels.doc sidecap.doc silence.doc simplecd.doc simplecv.doc simplewick.doc skb.doc skeycommand.doc skeyval.doc slantsc.doc slashbox.doc smalltableof.doc smartref.doc snapshot.doc soul.doc sparklines.doc spreadtab.doc spverbatim.doc splitindex.doc spot.doc spotcolor.doc sprite.doc srcltx.doc sseq.doc ssqquote.doc standalone.doc statistik.doc stdclsdv.doc stdpage.doc stex.doc stringstrings.doc sttools.doc stubs.doc subdepth.doc subeqn.doc subeqnarray.doc subfigure.doc subfloat.doc substr.doc supertabular.doc svgcolor.doc svn.doc svn-multi.doc svn-prov.doc syntax.doc syntrace.doc synttree.doc tableaux.doc tablenotes.doc tablists.doc tabls.doc tabto-ltx.doc tabularborder.doc tabularcalc.doc tabularew.doc tabulary.doc talk.doc tcldoc.doc tdclock.doc technics.doc ted.doc termcal.doc termlist.doc tex-label.doc texmate.doc texments.doc texpower.doc texshade.doc textcase.doc textfit.doc textmerg.doc textpos.doc theoremref.doc threeparttable.doc threeparttablex.doc thinsp.doc thmtools.doc thumb.doc thumby.doc ticket.doc timesht.doc timing.doc titlepic.doc titleref.doc titlesec.doc titling.doc tocbibind.doc tocloft.doc tocvsec2.doc todo.doc todonotes.doc tokenizer.doc toolbox.doc topfloat.doc totcount.doc totpages.doc trfsigns.doc trimspaces.doc trsym.doc trivfloat.doc truncate.doc twoinone.doc twoup.doc type1cm.doc typedref.doc typogrid.doc ucs.doc uebungsblatt.doc ulsy.doc umoline.doc underlin.doc undertilde.doc undolabl.doc units.doc upmethodology.doc ushort.doc varindex.doc varsfromjobname.doc vector.doc verbatimbox.doc verbatimcopy.doc verbdef.doc vhistory.doc vita.doc vmargin.doc volumes.doc vpe.doc vrsion.doc vruler.doc vwcol.doc wallpaper.doc warpcol.doc was.doc widetable.doc williams.doc wordlike.doc wrapfig.doc xargs.doc xcomment.doc xtab.doc xtcapts.doc xdoc.doc xfor.doc xifthen.doc xmpincl.doc xnewcommand.doc xoptarg.doc xstring.doc xwatermark.doc xytree.doc yafoot.doc yagusylo.doc ydoc.doc yplan.doc zed-csp.doc ziffer.doc zwgetfdate.doc zwpagelayout.doc "
+TEXLIVE_MODULE_SRC_CONTENTS="ESIEEcv.source HA-prosper.source Tabbing.source abstract.source achemso.source acronym.source addlines.source adrconv.source adrlist.source altfont.source amsaddr.source answers.source appendix.source arcs.source attachfile.source background.source beton.source bez123.source bigfoot.source bizcard.source blindtext.source blowup.source boites.source booklet.source boolexpr.source bophook.source boxhandler.source breakurl.source bullcntr.source cals.source capt-of.source captcont.source catechis.source ccaption.source cclicenses.source cd.source cd-cover.source cdpbundl.source changebar.source changepage.source changes.source chappg.source chapterfolder.source chletter.source chronology.source circ.source cjw.source clefval.source cleveref.source cmdtrack.source codepage.source colordoc.source colorwav.source combine.source constants.source contour.source cooking.source cookybooky.source cool.source coollist.source coolstr.source cooltooltips.source coordsys.source coverpage.source crossreference.source csvtools.source cuisine.source currfile.source cutwin.source cweb-latex.source dashbox.source dashrule.source datatool.source dateiliste.source datenumber.source datetime.source decimal.source delimtxt.source dialogl.source dinbrief.source dnaseq.source docmfp.source docmute.source dotarrow.source dotseqn.source dox.source dprogress.source drac.source draftcopy.source draftwatermark.source dtxgallery.source ebezier.source ecclesiastic.source ecv.source ed.source edmargin.source eemeir.source egplot.source ellipsis.source elmath.source elsarticle.source em.source emptypage.source endfloat.source endheads.source engpron.source engrec.source environ.source epigraph.source epiolmec.source eqlist.source eqparbox.source errata.source esdiff.source esint.source etaremune.source etextools.source eukdate.source everyhook.source everypage.source examdesign.source exercise.source exp-testopt.source expdlist.source export.source extract.source facsimile.source fancynum.source fancypar.source fancytooltips.source filecontents.source filehook.source fink.source fixme.source flabels.source flagderiv.source flashcards.source flippdf.source floatrow.source flowfram.source fltpage.source fmp.source fmtcount.source fnbreak.source foilhtml.source fonttable.source footmisc.source footnpag.source forarray.source forloop.source formular.source frankenstein.source ftnxtra.source fullblck.source fundus.source gcite.source genmpage.source ginpenc.source gmdoc-enhance.source graphicx-psmin.source grid.source gridset.source guitlogo.source hanging.source hc.source hhtensor.source histogr.source hpsdiss.source hrefhide.source hyper.source hyperxmp.source hyphenat.source idxlayout.source ifmtarg.source ifplatform.source imakeidx.source inlinedef.source inversepath.source iso.source iso10303.source isodate.source isodoc.source isorot.source isotope.source kerntest.source keycommand.source labbook.source labelcas.source labels.source lastpage.source latex-tds.source layouts.source lcd.source lcg.source leading.source leftidx.source lettrine.source lhelp.source limap.source linegoal.source lipsum.source listofsymbols.source listliketab.source locality.source localloc.source logpap.source ltxindex.source ltxnew.source mailing.source mailmerge.source makebox.source makecell.source makecmds.source makedtx.source manfnt.source manuscript.source mapcodes.source marginfix.source marginnote.source mathexam.source mcaption.source mcite.source menu.source method.source metre.source mff.source mftinc.source minibox.source minipage-marginpar.source minitoc.source minted.source minutes.source mlist.source modref.source modroman.source morefloats.source moresize.source moreverb.source mparhack.source msg.source mtgreek.source multibbl.source multicap.source mylatexformat.source nag.source namespc.source ncctools.source needspace.source newfile.source newlfm.source newspaper.source newvbtm.source newverbs.source niceframe.source noitcrul.source nomencl.source nomentbl.source nonfloat.source notes.source ntheorem.source numprint.source ocgtools.source octavo.source oldstyle.source onlyamsmath.source opcit.source pagecont.source pagenote.source pagesLTS.source paper.source papercdcase.source papermas.source papertex.source paralist.source paresse.source patch.source patchcmd.source pauldoc.source pawpict.source pbox.source pbsheet.source pdf14.source pdfcprot.source pdfx.source perltex.source permute.source photo.source pittetd.source plweb.source polyglot.source polynom.source polynomial.source polytable.source ppr-prv.source preprint.source prettyref.source preview.source probsoln.source prosper.source protocol.source psfragx.source pst-pdf.source pstool.source qcm.source qstest.source qsymbols.source quotchap.source quotmark.source rccol.source rcs-multi.source rcsinfo.source recipecard.source refman.source refstyle.source regcount.source register.source relenc.source rjlparshap.source robustcommand.source romannum.source rotfloat.source rtkinenc.source sauerj.source savefnmark.source savetrees.source scale.source scalebar.source sciwordconv.source sectsty.source semantic.source semioneside.source seqsplit.source sf298.source sffms.source shorttoc.source show2e.source showexpl.source showlabels.source sidecap.source silence.source simplecd.source simplecv.source simplewick.source skb.source slantsc.source snapshot.source soul.source spverbatim.source splitindex.source spot.source srcltx.source sseq.source ssqquote.source stack.source standalone.source statistik.source stdclsdv.source stdpage.source stex.source stringstrings.source subdepth.source subeqn.source subeqnarray.source subfigure.source subfloat.source supertabular.source svn.source svn-multi.source svn-prov.source syntrace.source synttree.source tablists.source tabularborder.source tabularew.source tabulary.source talk.source tcldoc.source ted.source termcal.source termlist.source tex-label.source texmate.source texments.source texpower.source texshade.source textcase.source textfit.source textmerg.source textpos.source thmtools.source thumb.source timesht.source titling.source tocbibind.source tocloft.source tocvsec2.source todo.source todonotes.source toolbox.source totcount.source totpages.source trfsigns.source trimspaces.source trsym.source trivfloat.source twoup.source type1cm.source typedref.source typogrid.source ulsy.source umoline.source underlin.source undertilde.source undolabl.source units.source ushort.source varindex.source vector.source vmargin.source volumes.source vrsion.source vwcol.source warning.source warpcol.source was.source widetable.source wordlike.source xargs.source xtab.source xtcapts.source xdoc.source xfor.source xmpincl.source yafoot.source yagusylo.source ydoc.source "
+inherit  texlive-module
+DESCRIPTION="TeXLive LaTeX supplementary packages"
+
+LICENSE="GPL-2 as-is BSD GPL-1 GPL-2 GPL-3 LGPL-2 LPPL-1.2 LPPL-1.3 public-domain "
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~ppc-macos"
+IUSE=""
+DEPEND=">=dev-texlive/texlive-latex-2010
+>=dev-texlive/texlive-pictures-2010
+>=dev-texlive/texlive-fontsrecommended-2008
+!dev-tex/achemso
+!dev-tex/prosper
+!dev-tex/ha-prosper
+!dev-tex/texpower
+!dev-tex/cdcover
+!dev-tex/ppower4
+!=dev-texlive/texlive-latexrecommended-2007*
+!=dev-texlive/texlive-latex3-2007*
+!=dev-texlive/texlive-humanities-2007*
+!<dev-texlive/texlive-mathextra-2010
+"
+RDEPEND="${DEPEND} "
+TEXLIVE_MODULE_BINSCRIPTS="texmf-dist/scripts/perltex/perltex.pl texmf-dist/scripts/ppower4/pdfthumb.tlu texmf-dist/scripts/ppower4/ppower4.tlu texmf-dist/scripts/pst-pdf/ps4pdf texmf-dist/scripts/splitindex/perl/splitindex.pl texmf-dist/scripts/svn-multi/svn-multi.pl texmf-dist/scripts/vpe/vpe.pl texmf-dist/scripts/authorindex/authorindex"
+PATCHES=( "${FILESDIR}/vpe_invocation.patch" )
